tools/crates/vendor/toml_edit/tests/fixtures/invalid/inline-table/no-close-1.stderr
TOML parse error at line 1, column 4
  |
1 | a={
  |    ^
invalid inline table
expected `}`
